Solved wrap issue

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
     background-color: var(--primary-color);
 }
 
-.main {
+main {
     display: flex;
     flex-wrap: wrap;
 }
